src/test/ui/associated-types/hr-associated-type-bound-param-2.stderr
error[E0277]: the trait bound `for<'b> <u16 as Z<'b, u16>>::W: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:3:8
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this
LL | where
LL |     T: Z<'a, u16>,
   |        ^^^^^^^^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<u16 as Z<'b, u16>>::W`
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ----- required by this bound in `Z`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error[E0277]: the trait bound `for<'b> <u16 as Z<'b, u16>>::W: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:15:14
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ----- required by this bound in `Z`
...
LL |     type W = str;
   |              ^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<u16 as Z<'b, u16>>::W`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error[E0277]: the trait bound `for<'b> <u16 as Z<'b, u16>>::W: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-2.rs:3:8
   |
LL | trait Z<'a, T: ?Sized>
   |       - required by a bound in this
LL | where
LL |     T: Z<'a, u16>,
   |        ^^^^^^^^^^ the trait `for<'b> std::clone::Clone` is not implemented for `<u16 as Z<'b, u16>>::W`
...
LL |     for<'b> <T as Z<'b, u16>>::W: Clone,
   |                                   ----- required by this bound in `Z`
   |
   = help: the following implementations were found:
             <&T as std::clone::Clone>
             <&mut T as std::clone::Clone>

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
